doc: update new relation

--- a/algorithm/贪心.md
+++ b/algorithm/贪心.md
@@ -66,3 +66,9 @@ eg：区间问题
   
 console.log(resolve([1, 2, 4, 6, 8], [3, 5, 7, 9, 10]))
 ```
+
+### 目录
+
+- [[贪心-字典序最小问题]]
+- [[贪心-Fence Repair]]
+- [[贪心-Saruman's Army]]
