doc: update diary

--- a/Diary/2023-09-15.md
+++ b/Diary/2023-09-15.md
@@ -23,3 +23,17 @@
 外面天黑了，不知道为什么又开始下雨了。
 
 可能又是台风来了。
+
+---
+
+老婆为了我受了很大的委屈。
+
+想办法赚钱。
+
+目前还是比较熟悉印章、印台这类。 所以准备往文具方面走。
+
+- 把shopify关闭：之前关过一次，综合考虑下来，还是决定完全关闭。
+- 印章类可以做小众的，主要做贴牌产品。需要寻找供应链。
+- 需要做一个落地页，同时配上域名。考虑到国内也需要有订单，需要寻找国内国外都可访问的服务器，域名和服务器都需要选择国内的，因为涉及到网络信息安全法。
+- 多收集样品和价格表，多了解文具方面的供应商。
+- 多使用ChatGPT，信息社会就得有信息社会的打法。
