doc: update diary

--- a/Diary/2023-09-18.md
+++ b/Diary/2023-09-18.md
@@ -19,3 +19,7 @@
 流量精不精准还另说，做了1688的都知道，阿里会在你流量数据不达标的时候，用机器人给你刷数据，分分钟达标。至于转化率嘛，呵呵。问就是你产品优化做得不够。实际上流量都是刷出来的，哪来的真实客户。
 
 *2023年9月18日15:45:59 写于东莞*
+
+---
+
+又学到了一个新的知识：关于政府税率和税收关系的`拉佛曲线`。
