doc: update book

--- a/书籍/《经济学原理》第七版-宏观经济学分册.md
+++ b/书籍/《经济学原理》第七版-宏观经济学分册.md
@@ -70,10 +70,80 @@ GDP平减指数：
 #### GDP平减指数
 
 计算公式：
-$$GDP\ deflator = \frac{nominal\ GDP}{real\ GDP} * 100\%$$
+$$GDP\ deflator = \frac{nominal\ GDP}{real\ GDP} \times 100\%$$
 
 
 **GDP平减指数衡量相对于基年价格的现期物价水平。**
 
 两个相邻年份的通货膨胀率计算：
-$$第二年的通货膨胀率 = \frac{(第二年的GDP平减指数 - 第一年的GDP平减指数)}{第一年的GDP平减指数} * 100\%$$
+$$第二年的通货膨胀率 = \frac{(第二年的GDP平减指数 - 第一年的GDP平减指数)}{第一年的GDP平减指数} \times 100\%$$
+
+## 生活费用的衡量
+
+### 消费物价指数（consumer price index， CPI）
+
+CPI是普通消费者所购买的物品与服务的总费用的衡量指标。
+
+CPI计算：
+- 固定一个basket：确定哪些物价对普通消费者是重要的。
+- 找出价格：找出basket中每个物品与服务的价格。
+- 计算费用：用价格计算不同时期basket中所有物品与服务的费用。
+- 选择基年并计算指数：$$消费物价指数 = \frac{当年篮子物品与服务的价格}{基年篮子物品与服务的价格} \times 100$$
+- 计算通货膨胀率（inflation rate）：$$第二年的通货膨胀率 = \frac{第二年CPI - 第一年CPI}{第一年CPI} \times 100\%$$
+
+eg:
+**basket：4个热狗，2个汉堡**
+
+物品价格费用：
+
+|年份|热狗价格|汉堡价格|
+|:-:|:-:|:-:|
+|2013|1|2|
+|2014|2|3|
+|2015|3|4|
+
+basket费用：
+
+- 2013：`1 * 4 + 2 * 2 = 8美元`
+- 2014：`2 * 4 + 3 * 2 = 14美元`
+- 2015：`3 * 4 + 4 * 2 = 20美元`
+
+CPI计算：
+
+- 2013：`(8 / 8) * 100 = 100`
+- 2013：`(14 / 8) * 100 = 175`
+- 2013：`(20 / 8) * 100 = 250`
+
+通货膨胀率：
+
+- 2014：`(175 - 100) / 100 * 100% = 75%`
+- 2015：`(250 - 175) / 175 * 100% = 43%`
+
+### 生产物价指数（producer price index，PPI）
+
+PPI衡量的是企业而不是消费者所购买的basket物品与服务的费用。由于企业最终要把他们的费用以更高价的形式转移给消费者，所以通常认为PPI的变动对预测CPI的变动是有用的。
+
+### 根据通货膨胀的影响校正经济变量
+
+#### 不同时期的美元
+
+把T年的美元换算成今天美元的公式：$$今天美元的数量 = T年美元的数量 \times \frac{今天的物价水平}{T年的物价水平}$$
+
+CPI之类的指标可以衡量物价水平，从而决定通货膨胀校正的大小。
+
+eg：1931年物价指数为15.2，2012年为229.5。假设1931年薪水为80000美元。则今天的薪水为：$$80000 \times \frac{229.5}{15.2} = 1207894美元$$
+
+- 名义利率（nominal interest rate）：衡量美元数量变动的利率
+- 真实利率（real interest rate）：根据通货膨胀校正的利率
+- 关系：`真实利率 = 名义利率 - 通货膨胀率`
+
+# 生产与增长
+
+## 生产率（productivity）
+
+生产率解释了为什么一些国家的收入比另一些国家高得多，它是每单位劳动投入所生产的物品和服务的数量。
+
+生产率受哪些影响？
+
+- 人均物质资本（physical capital）：用于生产物品与服务的设备和建筑物存量。工具越多，越能迅速精确的生产出更多产品。
+- 人均人力资本（human capital）：经济学家用来指工人通过教育、培训和经验而获得的知识与技能。
