--- a/Diary/2023-10-05.md
+++ b/Diary/2023-10-05.md
@@ -15,3 +15,17 @@
 今天一来上班， 就开始催我发货了，几十个快递，脑阔痛。
 
 *2023年10月5日09:01:12 写于东莞*
+
+---
+
+依旧是老毛病了。备品问题。
+
+今天又看见了一堆的上个月新订单的备品。
+
+有一个备了2套，一套18个，就是36个。
+
+另一个，定制了印刷的，也备品备了几十个。
+
+又是一大堆，堆着。
+
+迟早是要堆满的。
