--- a/笔记/锂电/LG-105.md
+++ b/笔记/锂电/LG-105.md
@@ -1,6 +1,6 @@
 ## 基本信息
 
-- name：LG-105，3p7s，电芯满电4.2v，空电2.5v
+- name：LG-105，3p7s，电芯满电 4.2v，空电 2.5v
 
 ## 工艺流程
 
@@ -8,23 +8,23 @@
 2. 组装电池：将电池按照顺序安装到模具中，注意正负极不能装错。
 3. 点焊：先将纯镍连接片点焊到电池上，再将小连接片点焊到之前焊稳在电池上的连接片上。注意小连接片需要点焊在电池的负极处，并且注意每个点焊的位置不能错误。
 4. 点焊检查：每个焊点需要点焊两次，不能出现虚焊、炸焊等。用刀片对焊点进行撬动，检查是否存在虚焊、双层片（两个相同的片点在相同的位置）、炸焊等情况。如果出现虚焊的情况，需要及时反映到点焊处，对点焊机进行调整。
-5. 排线：将树脂板、青稞纸、双面胶等安装在电池组上，然后将线布置好，**注意正负极**。剥锡需要长度长一点（5mm左右）。
+5. 排线：将树脂板、青稞纸、双面胶等安装在电池组上，然后将线布置好，**注意正负极**。剥锡需要长度长一点（5mm 左右）。
 6. 焊线：将线按照要求焊接在电池组的连接片处。
 7. 焊接保护板：将保护板焊接在电池组上，并且将排线的插头插入保护板。
 8. 贴青稞纸：用青稞纸将电池组包裹住，进行绝缘。
 9. 电池综合测试：使用综合测试仪对电池组进行测试，将不良品选出。若良品率低，需要及时停止前面工序，检查问题。
-10. 电池老化测试：使用老化测试仪对电池进行老化测试。老化流程为充电 -> 放电 -> 归电（将电池充到来料时的电量）。通过老化测试可以测出之前肉眼无法观察到的问题，如虚焊、双层板等。通过观察电池的参数，测试数据（空电电压`2.5*7`、满电电压`4.2*7`、电容数据、电阻、过流等）。电池的充电电流一般为`<电池容量*并联数/2`，如电池容量为2500mah，3并，则最大电流为`2.5A*3/2=7.5A/2`，低于这个电流较好。放电电流一般为`2A~3A`。
+10. 电池老化测试：使用老化测试仪对电池进行老化测试。老化流程为充电 -> 放电 -> 归电（将电池充到来料时的电量）。通过老化测试可以测出之前肉眼无法观察到的问题，如虚焊、双层板等。通过观察电池的参数，测试数据（空电电压`2.5*7`、满电电压`4.2*7`、电容数据、电阻、过流等）。电池的充电电流一般为`<电池容量*并联数/2`，如电池容量为 2500mah，3 并，则最大电流为`2.5A*3/2=7.5A/2`，低于这个电流较好。放电电流一般为`2A~3A`。
 11. 老化测试结束：将电池组的正极使用美纹纸包裹，防止电池组短路。
-12. 过塑：用PVC热缩锁膜对电池组进行热收缩包裹处理。
+12. 过塑：用 PVC 热缩锁膜对电池组进行热收缩包裹处理。
 13. 焊接充电口：将电池组正极与充电口正极焊接在一起，电池组负极与充电口负极焊接在一起。同时再焊接在放电口上。注意焊接之后，组装时正负线不许交叉。
 14. 打白胶：使用白胶包裹住电池的充电口与放电口，防止电池正负极短接发生短路。
-15. 贴EVA：使用EVA对电池组进行包裹，并装入塑料壳中。使用厚度较厚的EVA贴在电池的电极处，使用较薄的EVA贴在电池的侧身处。每处3个，总共为两侧电极3*2+一侧3，9个EVA。
+15. 贴 EVA：使用 EVA 对电池组进行包裹，并装入塑料壳中。使用厚度较厚的 EVA 贴在电池的电极处，使用较薄的 EVA 贴在电池的侧身处。每处 3 个，总共为两侧电极 3\*2+一侧 3，9 个 EVA。
 16. 组装放电口：将电池的放电口组装在塑料壳上，注意正负极的位置。
 17. 贴遇水显红标：在标签上写下出货日期，并在统一位置处粘贴。
 18. 盒盖：在塑料壳的中间部分钉入两个铁钉，然后进行盒盖。
-19. 上大螺丝：对外壳的后盖进行螺丝固定，总共5个。
-20. 上小螺丝：对外壳的充电口进行螺丝固定，总共2个。
-21. 出货测试：使用外用表对电池的放电口与充电口进行测试，检查是否存在正负极反接，电压过低，电压过高等。放电口测试方法为正接正极，负接负极；充电口为卡农口，测试方法为1号为正极，3号为负极，2号有时与负极相连，有时为分口。所以测试1、3口即可。标准出货要求与老化阶段的归电电压相同。允许有`0.2v`的掉电。如果电压过高，需要上老化机进行放电；电压过低则需要进行充电。
+19. 上大螺丝：对外壳的后盖进行螺丝固定，总共 5 个。
+20. 上小螺丝：对外壳的充电口进行螺丝固定，总共 2 个。
+21. 出货测试：使用外用表对电池的放电口与充电口进行测试，检查是否存在正负极反接，电压过低，电压过高等。放电口测试方法为正接正极，负接负极；充电口为卡农口，测试方法为 1 号为正极，3 号为负极，2 号有时与负极相连，有时为分口。所以测试 1、3 口即可。标准出货要求与老化阶段的归电电压相同。允许有`0.2v`的掉电。如果电压过高，需要上老化机进行放电；电压过低则需要进行充电。
 22. 贴防撕毁标：贴在固定位置即可。
 23. 装箱：需要尺寸为`50cm*100cm`的珍珠棉。
 
